add item function created

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div id="main">
-        <input type="text" class="inputItem">
-        <input type="number" min="0" class="inputQnty">
-        <input type="submit" value="Submit" class="submit">
+        <input id="item" type="text" class="inputItem">
+        <input id="qnty" type="number" min="0" class="inputQnty">
+        <input id="submit" type="submit" value="Add" class="submit">
     </div>
 </body>
     <script src="app.js"></script>
