--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
-    <title>Document</title>
+    <title>Register</title>
 </head>
 <body>
     <div class="row mt-5">
