--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
           <div class="card card-body text-center">
             <h1><i class="fab fa-node-js fa-3x"></i></h1>
             <p>Create an account or login</p>
-            <a href="./pages/register.html" class="btn btn-primary btn-block mb-2"
-              >Register</a
-            >
+            <a href="./pages/register.html" class="btn btn-primary btn-block mb-2">Register</a>
             <a href="./pages/login.html" class="btn btn-secondary btn-block">Login</a>
           </div>
         </div>
