--- a/pages/login.html
+++ b/pages/login.html
@@ -10,6 +10,7 @@
 <body>
     <div class="row mt-5">
         <div class="col-md-6 m-auto">
+
           <div class="card card-body">
             <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
             <form action="/users/login" method="POST">
@@ -33,10 +34,9 @@
                   placeholder="Enter Password"
                 />
               </div>
-              <button type="submit" class="btn btn-primary btn-block">Login</button>
+              <a href="./dataCenter.html" class="btn btn-primary btn-block mb-2">Login</a>
             </form>
-            <p class="lead mt-4">
-              No Account? <a href="/users/register">Register</a>
+            <p class="lead mt-4">No Account? <a href="./register.html">Register</a>
             </p>
           </div>
         </div>
