--- a/scr/pages/register.html
+++ b/scr/pages/register.html
@@ -14,7 +14,7 @@
             <h1 class="text-center mb-3">
               <i class="fas fa-user-plus"></i> Register</h1> 
               <div id="mes"></div>
-            <form action="/users/register" method="POST">
+            <div>
               <div class="form-group">
                 <label for="name">Name</label>
                 <input
@@ -59,15 +59,16 @@
                   value=""
                 />
               </div>
-              <button type="submit" class="btn btn-primary btn-block">
+              <button id="register" class="btn btn-primary btn-block">
                 Register
               </button>
-            </form>
+            </div>
             <p class="lead mt-4">Have An Account? <a href="./login.html">Login</a></p>
           </div>
         </div>
       </div>
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="../script/register.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>    
 </body>
