--- a/scr/pages/login.html
+++ b/scr/pages/login.html
@@ -13,7 +13,7 @@
 
           <div class="card card-body">
             <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
-            <form action="/users/login" method="POST">
+            <div>
               <div class="form-group">
                 <label for="email">Email</label>
                 <input
@@ -34,14 +34,17 @@
                   placeholder="Enter Password"
                 />
               </div>
-              <a href="./dataCenter.html" class="btn btn-primary btn-block mb-2">Login</a>
-            </form>
+              <button id="login" class="btn btn-primary btn-block">
+                Login
+              </button>
+            </div>
             <p class="lead mt-4">No Account? <a href="./register.html">Register</a>
             </p>
           </div>
         </div>
       </div>  
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="../script/login.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>      
 </body>
