--- a/scr/pages/addPage.html
+++ b/scr/pages/addPage.html
@@ -13,7 +13,7 @@
     
               <div class="card card-body">
                 <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Item</h1>
-                <form action="/users/login" method="POST">
+                <div>
                     <div class="form-group">
                       <label for="itemName">Name of the item</label>
                       <input
@@ -22,7 +22,7 @@
                         name="itemName"
                         class="form-control"
                         placeholder="Enter name of the Item to be included"
-                        value="Milk"
+                        value=""
                       />
                     </div>
                     <div class="form-group">
@@ -33,7 +33,7 @@
                         name="category"
                         class="form-control"
                         placeholder="Enter category Eg. Rs.2 pack"
-                        value="250 ml"
+                        value=""
                       />
                     </div>
                   <div class="form-group">
@@ -44,7 +44,7 @@
                       name="qty"
                       class="form-control"
                       placeholder="Eg. 50"
-                      value="36"
+                      value=""
                     />
                   </div>
                   <div class="form-group">
@@ -55,7 +55,7 @@
                       name="rate"
                       class="form-control"
                       placeholder="Eg. 250"
-                      value="10"
+                      value=""
                     />
                   </div> 
                   <div class="form-group">
@@ -66,11 +66,13 @@
                       name="itemID"
                       class="form-control"
                       placeholder="Eg. EX5210"
-                      value="MIL250"
+                      value=""
                     />
                   </div>
-                  <a href="#" id="add" class="btn btn-primary btn-block mb-2">Add</a>
-                </form>
+                  <button id="add" type="submit" class="btn btn-primary btn-block">
+                    Add
+                  </button>
+                </div>
               </div>
             </div>
           </div> 
