--- a/scr/pages/predict.html
+++ b/scr/pages/predict.html
@@ -15,11 +15,39 @@
     </div>
     <div class="inline">
             <div class="navBar">
-                <div class="pt-5" id="profile"><img src="../img/Profile_img.png" alt="Girl in a jacket" width="42px" height="42px"><span><h3 class="ml-2 mb-0" id="profile_name">Profile</h3></span></div>
+                <div class="pt-5" id="profile"><img src="../img/Profile_img.png" alt="ProfileImg" width="42px" height="42px"><span><h3 class="ml-2 mb-0" id="profile_name">Profile</h3></span></div>
             </div>
             <hr class="hr">
             <div class="dashBody">
-
+                <div class="row mt-5">
+                    <div class="dashDiv col-md-10 m-auto">
+                        <div class="subHeader">
+                                Item to be predicted :
+                                <span><input id="headingInput" type="text" placeholder=" Eg. Item ID"></span>
+                        </div>
+                        <div id="predictorColumn">
+                            <div id="immediateRequirement">Immediate Requirements:
+                                <div id="immediateRequirementList">
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                    <ul>Arvi</ul>
+                                </div>
+                            </div>
+                            <div id="mightNeed">f</div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
     </div>
 </body>
