--- a/scr/pages/dataCenter.html
+++ b/scr/pages/dataCenter.html
@@ -16,9 +16,9 @@
                 <i class="fas fa-user-plus"></i> Data Center</h1> 
                 <div id="mes"></div>
                 <a href="./predict.html" class="btn btn-primary btn-block mb-2">Predict</a>
-                <a href="./pages/register.html" class="btn btn-primary btn-block mb-2">Update</a>
+                <a href="./update.html" class="btn btn-primary btn-block mb-2">Update</a>
                 <a href="./addPage.html" class="btn btn-primary btn-block mb-2">Add</a>
-                <a href="./view.html" class="btn btn-primary btn-block mb-2">View</a>
+                <!-- <a href="./view.html" class="btn btn-primary btn-block mb-2">View</a> -->
             </div>
         </div>
     </div>
