Appending list dynamicaly

--- a/scr/pages/predict.html
+++ b/scr/pages/predict.html
@@ -27,28 +27,20 @@
                         </div>
                         <div id="predictorColumn">
                             <div id="immediateRequirement">Immediate Requirements:
-                                <div id="immediateRequirementList">
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
-                                    <ul>Arvi</ul>
+                                <div>
+                                    <ul id="immediateRequirementList">
+                                        <li></li>
+                                    </ul>
                                 </div>
                             </div>
-                            <div id="mightNeed">f</div>
+                            <div id="mightNeed">flkljgeietvunwionh3q</div>
                         </div>
                     </div>
                 </div>
                 
             </div>
     </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="../script/datacenter/predict.js"></script>
 </body>
 </html>
