--- a/scr/pages/predict.html
+++ b/scr/pages/predict.html
@@ -15,7 +15,10 @@
     </div>
     <div class="inline">
             <div class="navBar">
-                <div class="pt-5" id="profile"><img src="../img/Profile_img.png" alt="ProfileImg" width="42px" height="42px"><span><h3 class="ml-2 mb-0" id="profile_name">Profile</h3></span></div>
+                <div class="pt-5" id="profile">
+                    <img src="../img/Profile_img.png" alt="ProfileImg" width="42px" height="42px">
+                    <span><h3 class="ml-2 mb-0" id="profile_name">Profile</h3></span>
+                </div>
             </div>
             <hr class="hr">
             <div class="dashBody">
@@ -29,11 +32,13 @@
                             <div id="immediateRequirement">Immediate Requirements:
                                 <div>
                                     <ul id="immediateRequirementList">
+                                        <hr>
+                                        <li><b>Item-Name ItemID (InStock)<span id="req">Min Req.</span></b></li>
                                         <li></li>
                                     </ul>
                                 </div>
                             </div>
-                            <div id="mightNeed">flkljgeietvunwionh3q</div>
+                            <div id="mightNeed"></div>
                         </div>
                     </div>
                 </div>
