--- a/scr/pages/predict.html
+++ b/scr/pages/predict.html
@@ -18,15 +18,19 @@
                 <div class="pt-5" id="profile">
                     <img src="../img/Profile_img.png" alt="ProfileImg" width="42px" height="42px">
                     <span><h3 class="ml-2 mb-0" id="profile_name">Profile</h3></span>
+                    <br>
                 </div>
+                <div class="ml-2 mb-0"s id="addItems"><h3><a href="./addPage.html"> Add New items</a></h3></div>
+                <div class="ml-2 mb-0"s id="addItems"><h3><a href="./update.html">Update</a> </h3></div>
+                <div class="ml-2 mb-0"s id="addItems"><h3><a href="#">Billing</a> </h3></div>
             </div>
             <hr class="hr">
             <div class="dashBody">
-                <div class="row mt-5">
-                    <div class="dashDiv col-md-10 m-auto">
+                <div class=" mt-5">
+                    <div class="dashDiv col-md-10">
                         <div class="subHeader">
-                                Item to be predicted :
-                                <span><input id="headingInput" type="text" placeholder=" Eg. Item ID"></span>
+                                Predicted  items
+                                <!-- <span><input id="headingInput" type="text" placeholder=" Eg. Item ID"></span> -->
                         </div>
                         <div id="predictorColumn">
                             <div id="immediateRequirement">Immediate Requirements:
