--- a/scr/pages/login.html
+++ b/scr/pages/login.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <div class="row mt-5">
-        <div class="col-md-6 m-auto">
+        <div class="col-md-4 m-auto">
 
           <div class="card card-body">
             <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
             <div>
               <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email">Enter your passcode here</label>
                 <input
-                  type="email"
-                  id="email"
-                  name="email"
+                  type="password"
+                  id="passcode"
+                  name="passcode"
                   class="form-control"
-                  placeholder="Enter Email"
+                  placeholder="Eg. 0000"
                 />
               </div>
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <label for="password">Password</label>
                 <input
                   type="password"
@@ -33,12 +33,12 @@
                   class="form-control"
                   placeholder="Enter Password"
                 />
-              </div>
+              </div> -->
               <button id="login" class="btn btn-primary btn-block">
                 Login
               </button>
             </div>
-            <p class="lead mt-4">No Account? <a href="./register.html">Register</a>
+            <!-- <p class="lead mt-4">No Account? <a href="./register.html">Register</a> -->
             </p>
           </div>
         </div>
