--- a/scr/pages/dataCenter.html
+++ b/scr/pages/dataCenter.html
@@ -5,23 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/update.css">
     <title>Data Center</title>
+
 </head>
 <body>
+        <!-- Header -->
+        <div class="topContainer">
+          <div>IPREDICT</div>
+          <div>
+            <img class="logo" src="../img/iPredictLogo.png" alt="iPredictLogo" />
+          </div>
+        </div>
+    
+        <!-- NavBar -->
+        <div class="pos-f-t customNavbar">
+          <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+              <!-- Shop and Customer details -->
+              <div class="shopAndCustomerDetails">
+                <!-- Shop Details -->
+                <div class="shopDetailsSection">
+                  <div class="detailsTitle"><h3>SHOP</h3></div>
+                  <br />
+                  <div class="shopMainDetails">
+                    AA Stores <br />
+                    GSTIN: 27AACCF0683K1ZH
+                  </div>
+                  123, 5th Main Road, Ejipura, <br />
+                  Bangalore, Karnataka - 560 047 <br />
+                  9654171823
+                </div>
+                <!-- Summary Details -->
+                <div class="summaryDetailsSection">
+                  <div class="detailsTitle"><h3></h3></div>
+                  <div class="summaryAmount"><h3></h3></div>
+                  <div class="addItemsOrCheckoutButtons"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <nav class="navbar navbar-dark navBarBand">
+            <button
+              id="navBarButton"
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarToggleExternalContent"
+              aria-controls="navbarToggleExternalContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </nav>
+        </div>    
 
-    <div class="row mt-5">
-        <div class="col-md-4 m-auto">
-            <div class="card card-body">
-            <h1 class="text-center mb-3">
-                <i class="fas fa-user-plus"></i> Data Center</h1> 
-                <div id="mes"></div>
-                <a href="./predict.html" class="btn btn-primary btn-block mb-2">Predict</a>
-                <a href="./update.html" class="btn btn-primary btn-block mb-2">Update</a>
-                <a href="./addPage.html" class="btn btn-primary btn-block mb-2">Add</a>
-                <!-- <a href="./view.html" class="btn btn-primary btn-block mb-2">View</a> -->
+        <div class="row mt-5">
+            <div class="col-md-4 m-auto">
+                <div class="card card-body">
+                <h1 class="text-center mb-3">
+                    <i class="fas fa-user-plus"></i> Data Center</h1> 
+                    <div id="mes"></div>
+                    <a href="./predict.html" class="btn btn-primary btn-block mb-2">Predict</a>
+                    <a href="./update.html" class="btn btn-primary btn-block mb-2">Update</a>
+                    <a href="./addPage.html" class="btn btn-primary btn-block mb-2">Add</a>
+                    <!-- <a href="./view.html" class="btn btn-primary btn-block mb-2">View</a> -->
+                </div>
             </div>
         </div>
-    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script
+    src="https://kit.fontawesome.com/e1e8e053d6.js"
+    crossorigin="anonymous"></script>
+</html>
+
+
+
+<body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../script/register.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
