--- a/scr/pages/predict.html
+++ b/scr/pages/predict.html
@@ -17,11 +17,12 @@
             <div class="navBar">
                 <div class="pt-5" id="profile">
                     <img src="../img/Profile_img.png" alt="ProfileImg" width="42px" height="42px">
-                    <span><h3 class="ml-2 mb-0" id="profile_name">Profile</h3></span>
+                    <span><h3 class="ml-2 mb-0" id="profile_name">Navigator</h3></span>
                     <br>
                 </div>
                 <div class="ml-2 mb-0"s id="addItems"><h3><a href="./addPage.html"> Add New items</a></h3></div>
                 <div class="ml-2 mb-0"s id="addItems"><h3><a href="./update.html">Update</a> </h3></div>
+                <div class="ml-2 mb-0"s id="addItems"><h3><a href="./dataCenter.html">Dashboard</a> </h3></div>
                 <div class="ml-2 mb-0"s id="addItems"><h3><a href="#">Billing</a> </h3></div>
             </div>
             <hr class="hr">
