--- a/scr/pages/update.html
+++ b/scr/pages/update.html
@@ -84,16 +84,15 @@
     
         <!-- Billing section -->
         <div id="updateModule">
-            <div id="filterBar">Filter <span>
+            <div id="filterBar"> <span>
                 <div id="filterInput">
-                    <input type="text" id="itemId" name="firstname" placeholder="By ID" value="">
-                    <input type="text" id="itemName" name="firstname" placeholder="By name" value="">
-                    <input type="text" id="category" name="firstname" placeholder="Category" value="">
+                    <input type="text" id="itemId" name="firstname" placeholder="Provide ID" value="">
+                    <!-- <input type="text" id="itemName" name="firstname" placeholder="By name" value="">
+                    <input type="text" id="category" name="firstname" placeholder="Category" value=""> -->
                 </div></span>
                 <button id="filterButton">Filter</button>
             </div>
         </div>
-        <div class="updatableInput"></div>
     
         <!--Customer Modal -->
         <div
