--- a/scr/pages/predict.html
+++ b/scr/pages/predict.html
@@ -50,7 +50,7 @@
                 
             </div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="../script/datacenter/predict.js"></script>
 </body>
 </html>
