--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
           <div class="card card-body text-center">
             <h1><i class="fab fa-node-js fa-3x"></i></h1>
             <p>Create an account or login</p>
-            <a href="#" id="register" class="btn btn-primary btn-block mb-2">Register</a>
-            <a href="#" id="login" class="btn btn-secondary btn-block">Login</a>
+            <a href="./pages/login.html" id="login" class="btn btn-primary btn-block">Login with Passcode</a>
           </div>
         </div>
       </div>
