--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="col-md-6 m-auto">
           <div class="card card-body text-center">
             <h1><i class="fab fa-node-js fa-3x"></i></h1>
-            <p>Create an account or login</p>
+            <p>Login</p>
             <a href="./pages/login.html" id="login" class="btn btn-primary btn-block">Login with Passcode</a>
           </div>
         </div>
