--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="card card-body text-center">
             <h1><i class="fab fa-node-js fa-3x"></i></h1>
             <p>Login</p>
-            <a href="./pages/login.html" id="login" class="btn btn-primary btn-block">Login with Passcode</a>
+            <a href="./scr/pages/login.html" id="login" class="btn btn-primary btn-block">Login with Passcode</a>
           </div>
         </div>
       </div>
