--- a/scr/pages/update.html
+++ b/scr/pages/update.html
@@ -66,10 +66,42 @@
                 <div id="filterInput">
                     <input type="text" id="itemId" name="itemId" placeholder="Provide ID" value="">
                 </div></span>
-                <button id="filterButton">Filter</button>
+                <button id="filterButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Filter</button>
+                <div class="flash"></div>
             </div>
         </div>
+        
         </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Update Module</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="form-group">
+                    <label for="recipient-name" id="itemDetails" class="col-form-label">Item Details</label>
+                    <div  class="form-control" id="recipient-name"></div>
+                  </div>
+                  <div class="form-group">
+                    <label for="message-text" class="col-form-label">Add or Update:</label>
+                    <input type="number" class="form-control" id="message-text" name="addContent" value="" />
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="addContent" data-dismiss="modal">Update Item</button>
+                <!-- <button type="button" class="btn btn-primary" id="updateContent">Update Item</button> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
       </body>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
